--- a/src/Base.Web/Views/Home/Contact.cshtml
+++ b/src/Base.Web/Views/Home/Contact.cshtml
@@ -4,6 +4,8 @@
     Layout = "~/Views/Shared/_LayoutFrontend.cshtml";
 }
 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhrdEzlfpnsnfq4MgU1e1CCsrvVx2d59s"></script>
+<script src="~/frontend-asset/js/GoogleMap.js"></script>
 <!-- Contact Page Start Here -->
 <div class="contact-page-area">
     <div class="container">
