--- a/src/Base.Web/Views/Shared/_LayoutFrontend.cshtml
+++ b/src/Base.Web/Views/Shared/_LayoutFrontend.cshtml
@@ -110,15 +110,10 @@
                             <nav>
                                 <ul>
                                     <li class="active">
-                                        <a href="index.html">Home <i class="fa fa-angle-down"></i></a>
-                                        <ul class="sub-menu">
-                                            <li><a href="index.html">Home One</a></li>
-                                            <li><a href="index2.html">Home Two</a></li>
-                                            <li><a href="index3.html">Home Three</a></li>
-                                        </ul>
+                                        <a href="~/Home">Home</a>
                                     </li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li>
+                                    <li><a href="~/Home/About">About</a></li>
+                                    @*<li>
                                         <a href="property.html">Property <i class="fa fa-angle-down"></i></a>
                                         <ul class="sub-menu">
                                             <li><a href="property-grid.html">Property Gride View</a></li>
@@ -130,14 +125,14 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                    </li>
-                                    <li>
+                                    </li>*@
+                                    @*<li>
                                         <a href="agent.html">Agent <i class="fa fa-angle-down"></i></a>
                                         <ul class="sub-menu">
                                             <li><a href="agent-details.html">Agent Details</a></li>
                                         </ul>
-                                    </li>
-                                    <li>
+                                    </li>*@
+                                    @*<li>
                                         <a href="#">Pages <i class="fa fa-angle-down"></i></a>
                                         <div class="mega-menu">
                                             <ul>
@@ -159,17 +154,16 @@
                                                 <li class="mega-item"><a href="404.html">Error Page</a></li>
                                             </ul>
                                         </div>
-                                    </li>
+                                    </li>*@
                                     <li>
-                                        <a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
+                                        <a href="~/Home/Blog">Blog <i class="fa fa-angle-down"></i></a>
                                         <ul class="sub-menu">
-                                            <li><a href="blog.html">Blog Grid View</a></li>
-                                            <li><a href="blog1.html">Blog Sidebar View</a></li>
-                                            <li><a href="single-blog.html">Blog Details</a></li>
+                                            <li><a href="~/Home/Blog">Blog Grid View</a></li>
+                                            <li><a href="~/Home/SingleBlog">Blog Details</a></li>
                                         </ul>
 
                                     </li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="~/Home/Contact">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -420,7 +414,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="footer-bottom-left">
-                            <p>Designed & Developed By  <a href="http://www.periodicitems.com/">periodicitems</a></p>
+                            <p>Designed & Developed By  <a href="http://www.htactive.com/">HT Active</a></p>
                         </div>
                     </div>
                 </div>
