--- a/src/Base.Web/Views/Shared/_LayoutDynamic.cshtml
+++ b/src/Base.Web/Views/Shared/_LayoutDynamic.cshtml
@@ -44,7 +44,7 @@
             <div class="panel-heading">
                 <h4 class="panel-title text-center">
                     <a href="/">
-                        <img id="logo" src="/images/dfw-logo.png" alt="Dynamic logo">
+                        <img id="logo" src="~/frontend-asset/images/logo.png" alt="Dynamic logo">
                     </a>
                 </h4>
             </div>
@@ -55,7 +55,7 @@
     <!-- End login container -->
     <div class="container">
         <div class="footer">
-            <p class="text-center">&copy;2017 Quỹ Fred Hollows tại Việt Nam</p>
+            <p class="text-center">&copy;2017 HT Active</p>
         </div>
     </div>
     <!-- Javascripts -->
